Client age taux nbenf

--- a/notebooks/executed/1_clean_client_et_marketing.ipynb
+++ b/notebooks/executed/1_clean_client_et_marketing.ipynb
@@ -4,7 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9ebfdc49-04c7-4a84-b1be-1ac1e087d2fd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:32.202540Z",
+     "iopub.status.busy": "2024-11-18T08:47:32.202328Z",
+     "iopub.status.idle": "2024-11-18T08:47:32.529931Z",
+     "shell.execute_reply": "2024-11-18T08:47:32.529614Z"
+    },
+    "papermill": {
+     "duration": 0.335606,
+     "end_time": "2024-11-18T08:47:32.530980",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:32.195374",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
@@ -18,7 +33,22 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b00f3c3f-9289-424f-aab7-3f0b1168f0b3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:32.536329Z",
+     "iopub.status.busy": "2024-11-18T08:47:32.536054Z",
+     "iopub.status.idle": "2024-11-18T08:47:34.570824Z",
+     "shell.execute_reply": "2024-11-18T08:47:34.566358Z"
+    },
+    "papermill": {
+     "duration": 2.056729,
+     "end_time": "2024-11-18T08:47:34.590250",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:32.533521",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
@@ -32,7 +62,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "dc76a926-dee5-4a5b-8541-770799535ebd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:34.604816Z",
+     "iopub.status.busy": "2024-11-18T08:47:34.604602Z",
+     "iopub.status.idle": "2024-11-18T08:47:37.332546Z",
+     "shell.execute_reply": "2024-11-18T08:47:37.331622Z"
+    },
+    "papermill": {
+     "duration": 2.737284,
+     "end_time": "2024-11-18T08:47:37.335482",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:34.598198",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "spark.sql(\"USE concessionnaire\")\n",
@@ -43,7 +88,22 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "16005548-19a2-4155-9909-170eb65d11ac",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:37.343738Z",
+     "iopub.status.busy": "2024-11-18T08:47:37.343600Z",
+     "iopub.status.idle": "2024-11-18T08:47:38.574123Z",
+     "shell.execute_reply": "2024-11-18T08:47:38.573595Z"
+    },
+    "papermill": {
+     "duration": 1.236268,
+     "end_time": "2024-11-18T08:47:38.576101",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:37.339833",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -54,7 +114,16 @@
   {
    "cell_type": "markdown",
    "id": "c071dce2-dee8-482f-b3a1-64aed2e6e952",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.002495,
+     "end_time": "2024-11-18T08:47:38.582236",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:38.579741",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Affichage des colonnes du df Client"
    ]
@@ -63,7 +132,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "f5f147db-7aa3-4299-8c64-05f993687e12",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:38.587001Z",
+     "iopub.status.busy": "2024-11-18T08:47:38.586829Z",
+     "iopub.status.idle": "2024-11-18T08:47:40.258608Z",
+     "shell.execute_reply": "2024-11-18T08:47:40.257445Z"
+    },
+    "papermill": {
+     "duration": 1.679738,
+     "end_time": "2024-11-18T08:47:40.263933",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:38.584195",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -97,7 +181,16 @@
   {
    "cell_type": "markdown",
    "id": "327f1236-c48b-4ff8-bdce-894d2d6c452f",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.005726,
+     "end_time": "2024-11-18T08:47:40.275832",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:40.270106",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Traitement col age, taux, nbenfantacharge"
    ]
@@ -106,7 +199,22 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "56157488-fe64-44fc-90f6-b4b30d371e32",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:40.288801Z",
+     "iopub.status.busy": "2024-11-18T08:47:40.288448Z",
+     "iopub.status.idle": "2024-11-18T08:47:42.915914Z",
+     "shell.execute_reply": "2024-11-18T08:47:42.914630Z"
+    },
+    "papermill": {
+     "duration": 2.641792,
+     "end_time": "2024-11-18T08:47:42.920720",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:40.278928",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Remplace les valeurs nulles par la moyenne pour chaque colonne spécifiée\n",
@@ -118,7 +226,16 @@
   {
    "cell_type": "markdown",
    "id": "3796e960-d41f-42fd-8cd3-4d8788493aa6",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.002849,
+     "end_time": "2024-11-18T08:47:42.930640",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:42.927791",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Traitement col situationfamiliale"
    ]
@@ -127,7 +244,22 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "8fdee64a-672b-43ec-99c0-967a059fe00b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:42.937637Z",
+     "iopub.status.busy": "2024-11-18T08:47:42.937032Z",
+     "iopub.status.idle": "2024-11-18T08:47:44.041604Z",
+     "shell.execute_reply": "2024-11-18T08:47:44.040372Z"
+    },
+    "papermill": {
+     "duration": 1.110691,
+     "end_time": "2024-11-18T08:47:44.043579",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:42.932888",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -160,7 +292,22 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "5c33ce95-e8b2-41f5-9d2d-d590849ea3c3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:44.051515Z",
+     "iopub.status.busy": "2024-11-18T08:47:44.051369Z",
+     "iopub.status.idle": "2024-11-18T08:47:44.111962Z",
+     "shell.execute_reply": "2024-11-18T08:47:44.111535Z"
+    },
+    "papermill": {
+     "duration": 0.065745,
+     "end_time": "2024-11-18T08:47:44.113457",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:44.047712",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Remplace les caractères spéciaux par 'é' dans la colonne 'situationfamilliale'\n",
@@ -177,7 +324,22 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "45ccf9a0-277c-4c3c-93bc-1aa5196fd7e0",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:44.120172Z",
+     "iopub.status.busy": "2024-11-18T08:47:44.120051Z",
+     "iopub.status.idle": "2024-11-18T08:47:45.112317Z",
+     "shell.execute_reply": "2024-11-18T08:47:45.108635Z"
+    },
+    "papermill": {
+     "duration": 1.009578,
+     "end_time": "2024-11-18T08:47:45.126587",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:44.117009",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -204,7 +366,22 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "cb049077-be0f-4538-b257-b8351e4c50d6",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:45.141187Z",
+     "iopub.status.busy": "2024-11-18T08:47:45.140542Z",
+     "iopub.status.idle": "2024-11-18T08:47:46.211128Z",
+     "shell.execute_reply": "2024-11-18T08:47:46.210469Z"
+    },
+    "papermill": {
+     "duration": 1.077273,
+     "end_time": "2024-11-18T08:47:46.212851",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:45.135578",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -264,7 +441,16 @@
   {
    "cell_type": "markdown",
    "id": "e2ae338f-a4ab-4c34-a59e-acb903ecb539",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.002565,
+     "end_time": "2024-11-18T08:47:46.219965",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:46.217400",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Traitement col deuxiemevoiture"
    ]
@@ -273,7 +459,22 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "15dc6a81-a74f-4df0-8d69-e5b63bae1849",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:46.225717Z",
+     "iopub.status.busy": "2024-11-18T08:47:46.225603Z",
+     "iopub.status.idle": "2024-11-18T08:47:46.897102Z",
+     "shell.execute_reply": "2024-11-18T08:47:46.896530Z"
+    },
+    "papermill": {
+     "duration": 0.675577,
+     "end_time": "2024-11-18T08:47:46.898147",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:46.222570",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -282,10 +483,9 @@
       "+---------------+\n",
       "|deuxiemevoiture|\n",
       "+---------------+\n",
-      "|false          |\n",
-      "|               |\n",
-      "|?              |\n",
       "|true           |\n",
+      "|false          |\n",
+      "|NULL           |\n",
       "+---------------+\n",
       "\n"
      ]
@@ -299,7 +499,22 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "d1e2592c-312f-4cf9-8945-c5a3258b94f5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:46.906786Z",
+     "iopub.status.busy": "2024-11-18T08:47:46.906647Z",
+     "iopub.status.idle": "2024-11-18T08:47:46.921909Z",
+     "shell.execute_reply": "2024-11-18T08:47:46.921503Z"
+    },
+    "papermill": {
+     "duration": 0.020921,
+     "end_time": "2024-11-18T08:47:46.922724",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:46.901803",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Normaliser les valeurs de la colonne 'deuxiemevoiture' \n",
@@ -314,7 +529,22 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "6e66524b-e45a-4b41-b644-4a26e9a0fcbf",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:46.928979Z",
+     "iopub.status.busy": "2024-11-18T08:47:46.928874Z",
+     "iopub.status.idle": "2024-11-18T08:47:47.725155Z",
+     "shell.execute_reply": "2024-11-18T08:47:47.724644Z"
+    },
+    "papermill": {
+     "duration": 0.800627,
+     "end_time": "2024-11-18T08:47:47.726231",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:46.925604",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -360,7 +590,16 @@
   {
    "cell_type": "markdown",
    "id": "fa40048d-3561-404a-999a-a7d280e26248",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.003009,
+     "end_time": "2024-11-18T08:47:47.733386",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:47.730377",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Traitement col immatriculation"
    ]
@@ -369,7 +608,22 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "740075c5-69fa-4f5f-9e90-914db2e5dc63",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:47.740160Z",
+     "iopub.status.busy": "2024-11-18T08:47:47.739882Z",
+     "iopub.status.idle": "2024-11-18T08:47:47.749798Z",
+     "shell.execute_reply": "2024-11-18T08:47:47.749451Z"
+    },
+    "papermill": {
+     "duration": 0.014289,
+     "end_time": "2024-11-18T08:47:47.750524",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:47.736235",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Filtrer les lignes avec des valeurs manquantes dans la colonne 'immatriculation'\n",
@@ -379,7 +633,16 @@
   {
    "cell_type": "markdown",
    "id": "96b584c2-e315-42f2-b5e3-e0d3f6260712",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.002794,
+     "end_time": "2024-11-18T08:47:47.756390",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:47.753596",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Traitement col sexe"
    ]
@@ -388,7 +651,22 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "7a691b06-9a53-4141-8818-794203470b7f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:47.762585Z",
+     "iopub.status.busy": "2024-11-18T08:47:47.762472Z",
+     "iopub.status.idle": "2024-11-18T08:47:48.505182Z",
+     "shell.execute_reply": "2024-11-18T08:47:48.504520Z"
+    },
+    "papermill": {
+     "duration": 0.747545,
+     "end_time": "2024-11-18T08:47:48.506708",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:47.759163",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -422,7 +700,22 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "4ae77c55-b7fc-4753-904d-2e6a776cb988",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:48.516789Z",
+     "iopub.status.busy": "2024-11-18T08:47:48.516642Z",
+     "iopub.status.idle": "2024-11-18T08:47:48.535787Z",
+     "shell.execute_reply": "2024-11-18T08:47:48.535425Z"
+    },
+    "papermill": {
+     "duration": 0.024339,
+     "end_time": "2024-11-18T08:47:48.536596",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:48.512257",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -443,7 +736,22 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "83b8c6e9-bea9-47f6-8b06-2c33426c2243",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:48.544003Z",
+     "iopub.status.busy": "2024-11-18T08:47:48.543896Z",
+     "iopub.status.idle": "2024-11-18T08:47:49.696268Z",
+     "shell.execute_reply": "2024-11-18T08:47:49.695469Z"
+    },
+    "papermill": {
+     "duration": 1.161488,
+     "end_time": "2024-11-18T08:47:49.701367",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:48.539879",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -489,7 +797,22 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "13d2af5a-8e7f-42f1-bd62-28ee8a59557a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:49.713761Z",
+     "iopub.status.busy": "2024-11-18T08:47:49.713634Z",
+     "iopub.status.idle": "2024-11-18T08:47:50.052375Z",
+     "shell.execute_reply": "2024-11-18T08:47:50.050979Z"
+    },
+    "papermill": {
+     "duration": 0.345389,
+     "end_time": "2024-11-18T08:47:50.054184",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:49.708795",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -532,10 +855,58 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "23c79bcf-d8ea-4385-9121-41c72e10dd5b",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:47:50.064798Z",
+     "iopub.status.busy": "2024-11-18T08:47:50.064518Z",
+     "iopub.status.idle": "2024-11-18T08:48:00.627010Z",
+     "shell.execute_reply": "2024-11-18T08:48:00.590561Z"
+    },
+    "papermill": {
+     "duration": 10.584539,
+     "end_time": "2024-11-18T08:48:00.644236",
+     "exception": false,
+     "start_time": "2024-11-18T08:47:50.059697",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df_client.write.mode(\"overwrite\").saveAsTable(\"client_processed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "63c48bd9-9ffd-46f5-a942-f782ff53fc4c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T08:48:00.679400Z",
+     "iopub.status.busy": "2024-11-18T08:48:00.678674Z",
+     "iopub.status.idle": "2024-11-18T08:48:00.692744Z",
+     "shell.execute_reply": "2024-11-18T08:48:00.692002Z"
+    },
+    "papermill": {
+     "duration": 0.041244,
+     "end_time": "2024-11-18T08:48:00.694977",
+     "exception": false,
+     "start_time": "2024-11-18T08:48:00.653733",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world\")"
    ]
   }
  ],
@@ -556,6 +927,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.6"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 32.105361,
+   "end_time": "2024-11-18T08:48:03.324423",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "/home/jovyan/work/1_clean_client_et_marketing.ipynb",
+   "output_path": "/home/jovyan/work/executed/1_clean_client_et_marketing.ipynb",
+   "parameters": {},
+   "start_time": "2024-11-18T08:47:31.219062",
+   "version": "2.6.0"
   }
  },
  "nbformat": 4,
