--- a/notebooks/1_clean_client_et_marketing.ipynb
+++ b/notebooks/1_clean_client_et_marketing.ipynb
@@ -14,6 +14,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98380410-8097-469b-9d0b-6b4a2134d874",
+   "metadata": {},
+   "source": [
+    "# Initialisation de la session Spark, et charge les données Hive"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b00f3c3f-9289-424f-aab7-3f0b1168f0b3",
@@ -513,8 +521,7 @@
     ")\n",
     "\n",
     "# Filtrer pour supprimer les clients avec sexe 'Inconnu'\n",
-    "df_client = df_client.filter(col(\"sexe\") != \"Inconnu\")\n",
-    "\n"
+    "df_client = df_client.filter(col(\"sexe\") != \"Inconnu\")"
    ]
   },
   {
@@ -731,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "56ade22a-1e93-4fc6-8bc4-2c4ebfdee30e",
    "metadata": {},
    "outputs": [],
