--- a/notebooks/5_merge_client_immat.ipynb
+++ b/notebooks/5_merge_client_immat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2ebf395b-31a2-4b62-8aaf-017fed658f59",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a30525cc-9f65-484e-8324-3cbba53db0de",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "72ca1caf-31e9-4a14-aef8-9f5742d90402",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "060da809-0f5e-41b9-9416-5a4393096ae5",
    "metadata": {},
    "outputs": [],
@@ -83,10 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f5286d67-cc4c-45af-b1b2-e3f00e4e6477",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "merged_df.createOrReplaceTempView(\"merged_view\")\n",
     "spark.sql(\"DROP TABLE IF EXISTS client_immatriculation_merged\")\n",
