--- a/notebooks/7_client_immat_categorie.ipynb
+++ b/notebooks/7_client_immat_categorie.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "spark.sql(\"USE concessionnaire\")\n",
-    "immatriculation_df = spark.sql(\"SELECT * FROM client_immatriculation_merged\")"
+    "client_immat_df = spark.sql(\"SELECT * FROM client_immatriculation_merged\")"
    ]
   },
   {
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "immatriculation_df.show(10, truncate=False)"
+    "client_immat_df.show(10, truncate=False)"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "immatriculation_df = immatriculation_df.withColumn(\n",
+    "client_immat_df = client_immat_df.withColumn(\n",
     "    \"categorie\",\n",
     "    when((col(\"puissance\") <= 100) & (col(\"longueur\") == \"courte\"), \"citadine\")\n",
     "    .when((col(\"puissance\") > 100) & (col(\"puissance\") <= 200) & (col(\"longueur\") == \"courte\") & (col(\"prix\") < 30000), \"citadine premium\")\n",
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "immatriculation_df.select(\"marque\",\"modele\",\"categorie\",\"prix\",\"longueur\",\"puissance\").show(30, truncate=False)"
+    "client_immat_df.select(\"marque\",\"modele\",\"categorie\",\"prix\",\"longueur\",\"puissance\").show(30, truncate=False)"
    ]
   },
   {
@@ -179,11 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2cc41b18-f728-4089-8a41-4a7073e037c9",
+   "execution_count": 7,
+   "id": "15059391-625a-40eb-af09-b6f8aca47e5b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "client_immat_df.write.mode(\"overwrite\").saveAsTable(\"client_immatriculation_categorie\")"
+   ]
   }
  ],
  "metadata": {
