--- a/notebooks/clean_catalogue.ipynb
+++ b/notebooks/clean_catalogue.ipynb
@@ -607,7 +607,7 @@
    "outputs": [],
    "source": [
     "# # Arrêter la session Spark\n",
-    "spark.stop()\n",
+    "spark.stop()d\n",
     "print(\"Traitement terminé.\")"
    ]
   }
