test ameliorer model, modif cluster catégories

--- a/notebooks/9_entrainement_modele_ia.ipynb
+++ b/notebooks/9_entrainement_modele_ia.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "spark.sql(\"USE concessionnaire\")\n",
-    "client_immat_df = spark.sql(\"SELECT * FROM client_immatriculation_categorie\")"
+    "client_immat_df = spark.sql(\"SELECT * FROM client_vehicules_clusters_cleaned\")"
    ]
   },
   {
@@ -67,13 +67,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------+---+-----+----+-------------------+---------------+---------------+----------+---------+--------+--------+--------+-------+--------+-------+------+---------+\n",
-      "|immatriculation|age|sexe |taux|situationfamilliale|nbenfantacharge|deuxiemevoiture|marque    |puissance|longueur|nbplaces|nbportes|couleur|occasion|prix   |modele|categorie|\n",
-      "+---------------+---+-----+----+-------------------+---------------+---------------+----------+---------+--------+--------+--------+-------+--------+-------+------+---------+\n",
-      "|0 NQ 98        |50 |Femme|243 |En Couple          |0              |true           |Volkswagen|55       |courte  |5       |3       |blanc  |true    |8540.0 |Polo  |citadine |\n",
-      "|0 PW 98        |58 |Homme|502 |Célibataire        |0              |false          |Peugeot   |75       |courte  |5       |5       |noir   |false   |13750.0|1007  |citadine |\n",
-      "|1 AK 80        |35 |Homme|1127|Célibataire        |0              |false          |Audi      |75       |courte  |5       |5       |noir   |false   |18310.0|A2    |citadine |\n",
-      "+---------------+---+-----+----+-------------------+---------------+---------------+----------+---------+--------+--------+--------+-------+--------+-------+------+---------+\n",
+      "+---------------+---------+--------+--------+-------+----+---------------+-------------------+---------------+--------+\n",
+      "|immatriculation|puissance|longueur|nbPortes|prix   |age |nbenfantacharge|situationfamilliale|deuxiemevoiture|category|\n",
+      "+---------------+---------+--------+--------+-------+----+---------------+-------------------+---------------+--------+\n",
+      "|0 NQ 98        |55.0     |1.0     |3.0     |8540.0 |50.0|0.0            |1.0                |1              |1       |\n",
+      "|0 PW 98        |75.0     |1.0     |5.0     |13750.0|58.0|0.0            |0.0                |0              |0       |\n",
+      "|1 AK 80        |75.0     |1.0     |5.0     |18310.0|35.0|0.0            |0.0                |0              |7       |\n",
+      "+---------------+---------+--------+--------+-------+----+---------------+-------------------+---------------+--------+\n",
       "only showing top 3 rows\n",
       "\n"
      ]
