--- a/notebooks/9_entrainement_modele_ia.ipynb
+++ b/notebooks/9_entrainement_modele_ia.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "spark.sql(\"USE concessionnaire\")\n",
-    "client_immat_df = spark.sql(\"SELECT * FROM client_vehicules_clusters_cleaned\")"
+    "client_immat_df = spark.sql(\"SELECT * FROM client_immat_cat\")"
    ]
   },
   {
@@ -70,9 +70,9 @@
       "+---------------+---------+--------+--------+-------+----+---------------+-------------------+---------------+--------+\n",
       "|immatriculation|puissance|longueur|nbPortes|prix   |age |nbenfantacharge|situationfamilliale|deuxiemevoiture|category|\n",
       "+---------------+---------+--------+--------+-------+----+---------------+-------------------+---------------+--------+\n",
-      "|0 NQ 98        |55.0     |1.0     |3.0     |8540.0 |50.0|0.0            |1.0                |1              |1       |\n",
-      "|0 PW 98        |75.0     |1.0     |5.0     |13750.0|58.0|0.0            |0.0                |0              |0       |\n",
-      "|1 AK 80        |75.0     |1.0     |5.0     |18310.0|35.0|0.0            |0.0                |0              |7       |\n",
+      "|0 OG 13        |75.0     |1.0     |5.0     |12817.0|56.0|0.0            |0.0                |0              |4       |\n",
+      "|0 OZ 65        |125.0    |3.0     |5.0     |23900.0|32.0|2.0            |1.0                |0              |0       |\n",
+      "|1 PD 24        |245.0    |4.0     |5.0     |34440.0|28.0|2.0            |1.0                |0              |0       |\n",
       "+---------------+---------+--------+--------+-------+----+---------------+-------------------+---------------+--------+\n",
       "only showing top 3 rows\n",
       "\n"
@@ -85,30 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "03158d81-0934-4e01-84b3-32a1b57e1c0f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+-----+----+-------------------+---------------+---------------+---------+\n",
-      "|age|sexe |taux|situationfamilliale|nbenfantacharge|deuxiemevoiture|categorie|\n",
-      "+---+-----+----+-------------------+---------------+---------------+---------+\n",
-      "|50 |Femme|243 |En Couple          |0              |true           |citadine |\n",
-      "|58 |Homme|502 |Célibataire        |0              |false          |citadine |\n",
-      "|35 |Homme|1127|Célibataire        |0              |false          |citadine |\n",
-      "|24 |Homme|1332|Célibataire        |0              |false          |citadine |\n",
-      "|68 |Homme|529 |En Couple          |2              |false          |familiale|\n",
-      "|53 |Homme|569 |En Couple          |3              |false          |sportive |\n",
-      "|32 |Homme|509 |En Couple          |0              |false          |familiale|\n",
-      "|32 |Homme|1184|Célibataire        |0              |false          |citadine |\n",
-      "|25 |Homme|1098|En Couple          |3              |false          |sportive |\n",
-      "|19 |Homme|203 |En Couple          |4              |false          |autre    |\n",
-      "+---+-----+----+-------------------+---------------+---------------+---------+\n",
-      "only showing top 10 rows\n",
-      "\n"
+     "ename": "AnalysisException",
+     "evalue": "[UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `taux` cannot be resolved. Did you mean one of the following? [`age`, `prix`, `category`, `longueur`, `nbPortes`].;\n'Project [age#5, 'taux, situationfamilliale#7, nbenfantacharge#6, deuxiemevoiture#8, 'categorie]\n+- Project [immatriculation#0, puissance#1, longueur#2, nbPortes#3, prix#4, age#5, nbenfantacharge#6, situationfamilliale#7, deuxiemevoiture#8, category#9]\n   +- SubqueryAlias spark_catalog.concessionnaire.client_immat_cat\n      +- Relation spark_catalog.concessionnaire.client_immat_cat[immatriculation#0,puissance#1,longueur#2,nbPortes#3,prix#4,age#5,nbenfantacharge#6,situationfamilliale#7,deuxiemevoiture#8,category#9] parquet\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mclient_immat_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mage\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtaux\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msituationfamilliale\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mnbenfantacharge\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdeuxiemevoiture\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcategorie\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mshow(\u001b[38;5;241m10\u001b[39m, truncate\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/sql/dataframe.py:3223\u001b[0m, in \u001b[0;36mDataFrame.select\u001b[0;34m(self, *cols)\u001b[0m\n\u001b[1;32m   3178\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mselect\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39mcols: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumnOrName\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataFrame\u001b[39m\u001b[38;5;124m\"\u001b[39m:  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   3179\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Projects a set of expressions and returns a new :class:`DataFrame`.\u001b[39;00m\n\u001b[1;32m   3180\u001b[0m \n\u001b[1;32m   3181\u001b[0m \u001b[38;5;124;03m    .. versionadded:: 1.3.0\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3221\u001b[0m \u001b[38;5;124;03m    +-----+---+\u001b[39;00m\n\u001b[1;32m   3222\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 3223\u001b[0m     jdf \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jcols\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mcols\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3224\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DataFrame(jdf, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msparkSession)\n",
+      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1322\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[1;32m   1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client\u001b[38;5;241m.\u001b[39msend_command(command)\n\u001b[0;32m-> 1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m \u001b[43mget_return_value\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1323\u001b[0m \u001b[43m    \u001b[49m\u001b[43manswer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n\u001b[1;32m   1326\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(temp_arg, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_detach\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m/usr/local/spark/python/pyspark/errors/exceptions/captured.py:185\u001b[0m, in \u001b[0;36mcapture_sql_exception.<locals>.deco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    181\u001b[0m converted \u001b[38;5;241m=\u001b[39m convert_exception(e\u001b[38;5;241m.\u001b[39mjava_exception)\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(converted, UnknownException):\n\u001b[1;32m    183\u001b[0m     \u001b[38;5;66;03m# Hide where the exception came from that shows a non-Pythonic\u001b[39;00m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;66;03m# JVM exception message.\u001b[39;00m\n\u001b[0;32m--> 185\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m converted \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    187\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: [UNRESOLVED_COLUMN.WITH_SUGGESTION] A column or function parameter with name `taux` cannot be resolved. Did you mean one of the following? [`age`, `prix`, `category`, `longueur`, `nbPortes`].;\n'Project [age#5, 'taux, situationfamilliale#7, nbenfantacharge#6, deuxiemevoiture#8, 'categorie]\n+- Project [immatriculation#0, puissance#1, longueur#2, nbPortes#3, prix#4, age#5, nbenfantacharge#6, situationfamilliale#7, deuxiemevoiture#8, category#9]\n   +- SubqueryAlias spark_catalog.concessionnaire.client_immat_cat\n      +- Relation spark_catalog.concessionnaire.client_immat_cat[immatriculation#0,puissance#1,longueur#2,nbPortes#3,prix#4,age#5,nbenfantacharge#6,situationfamilliale#7,deuxiemevoiture#8,category#9] parquet\n"
      ]
     }
    ],
