--- a/notebooks/analyse_merged_client_immat.ipynb
+++ b/notebooks/analyse_merged_client_immat.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ef5ce840-0772-49a7-8f16-0ab9322f1fdc",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6682dbe3-b3b3-4fb2-a985-9045f8c554b8",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
    "id": "abd53dce-f23b-4f44-887a-c2dc8e3f3f51",
    "metadata": {},
    "source": [
-    "# Vérifications des valeurs disctinctes de Age"
+    "# Vérifications des valeurs de Age"
    ]
   },
   {
@@ -212,6 +212,147 @@
    ],
    "source": [
     "client_immat_df.select(\"age\").distinct().orderBy('age').show(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb47f2de-6a87-48e7-b17f-1eff4d25b54c",
+   "metadata": {},
+   "source": [
+    "# Vérification des valeurs de Marque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6d325c3a-87ee-4aef-b67a-304311204a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|    marque|\n",
+      "+----------+\n",
+      "|Volkswagen|\n",
+      "|   Peugeot|\n",
+      "|    Jaguar|\n",
+      "|    Lancia|\n",
+      "|      Mini|\n",
+      "|       Kia|\n",
+      "|     Volvo|\n",
+      "|      Saab|\n",
+      "|      Audi|\n",
+      "|      Seat|\n",
+      "|  Mercedes|\n",
+      "|   Renault|\n",
+      "|       BMW|\n",
+      "|     Dacia|\n",
+      "|     Skoda|\n",
+      "|  Daihatsu|\n",
+      "|    Nissan|\n",
+      "|      Fiat|\n",
+      "|      Ford|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_immat_df.select(\"marque\").distinct().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "385ad80f-e515-4d79-8fa3-c802067ac3f2",
+   "metadata": {},
+   "source": [
+    "# Vérification des valeurs de Modele"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1edb222d-74b7-4b8c-87c3-027f640baf09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+\n",
+      "| modele|\n",
+      "+-------+\n",
+      "| Copper|\n",
+      "|   Golf|\n",
+      "| X-Type|\n",
+      "|     A2|\n",
+      "| Mondeo|\n",
+      "|    S80|\n",
+      "|   1007|\n",
+      "|  Logan|\n",
+      "|  Croma|\n",
+      "|   Polo|\n",
+      "|    Vel|\n",
+      "| Toledo|\n",
+      "|Ypsilon|\n",
+      "|  Cuore|\n",
+      "| Laguna|\n",
+      "|     M5|\n",
+      "| Maxima|\n",
+      "| Megane|\n",
+      "|   A200|\n",
+      "|   120i|\n",
+      "|   S500|\n",
+      "|Picanto|\n",
+      "| Almera|\n",
+      "|    9.3|\n",
+      "|    New|\n",
+      "|Primera|\n",
+      "|     A3|\n",
+      "| Superb|\n",
+      "+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_immat_df.select(\"modele\").distinct().show(1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfbdba2e-d7ef-4cf9-bfb7-f9757ee82f42",
+   "metadata": {},
+   "source": [
+    "# Vérification des valeurs de longeur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bb96a2c0-92cb-473b-b5d9-ad1819a213d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|   longueur|\n",
+      "+-----------+\n",
+      "|    moyenne|\n",
+      "|très longue|\n",
+      "|     courte|\n",
+      "|     longue|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_immat_df.select(\"longueur\").distinct().show()"
    ]
   },
   {
